--- a/DentalManagement/DentalManagement/src/main/resources/application.properties
+++ b/DentalManagement/DentalManagement/src/main/resources/application.properties
@@ -16,3 +16,7 @@ server.error.include-stacktrace = never
 
 # Specify the server port
 server.port = 8080
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
