--- a/DentalManagement/DentalManagement/src/main/resources/application.properties
+++ b/DentalManagement/DentalManagement/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-# Setup the db connection
-spring.datasource.url = jdbc:mysql://localhost:3306/dbdentalmanagement
+## Setup the db connection
+#spring.datasource.url=jdbc:mysql://dentalmanagementserver.mysql.database.azure.com:3306/information_schema?serverTimezone=UTC&useSSL=true&requireSSL=false
+#
+## Setup db login credentials
+#spring.datasource.username = root
+#spring.datasource.password = root
 
-# Setup db login credentials
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://happy-dental-server.mysql.database.azure.com:3306/dbdentalmanagement?useSSL=true
+spring.datasource.username=dental
+spring.datasource.password=Happyteeth#5
 
 # Auto create tables based on entities
 spring.jpa.hibernate.ddl-auto = update
@@ -20,3 +25,7 @@ server.port = 8080
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.maximumPoolSize=10
+spring.datasource.hikari.minimumIdle=5
+
