--- a/DentalManagement/DentalManagement/pom.xml
+++ b/DentalManagement/DentalManagement/pom.xml
@@ -55,30 +55,18 @@
 <!--	</build>-->
 
 
-<!--	<build>-->
-<!--		<plugins>-->
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-surefire-plugin</artifactId>-->
-<!--				<version>3.1.2</version>-->
-<!--				<configuration>-->
-<!--					<systemPropertyVariables>-->
-<!--						<spring.test.context.bootstrapper.defaultContextBootstrapper>-->
-<!--							com.dentalmanagement.DentalManagement.DentalManagementApplication-->
-<!--						</spring.test.context.bootstrapper.defaultContextBootstrapper>-->
-<!--					</systemPropertyVariables>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
-<!--		</plugins>-->
-<!--	</build>-->
-
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.1.2</version>
 				<configuration>
-					<mainClass>com.dentalmanagement.DentalManagement.DentalManagementApplication</mainClass>
+					<systemPropertyVariables>
+						<spring.test.context.bootstrapper.defaultContextBootstrapper>
+							com.dentalmanagement.DentalManagement.DentalManagementApplication
+						</spring.test.context.bootstrapper.defaultContextBootstrapper>
+					</systemPropertyVariables>
 				</configuration>
 			</plugin>
 		</plugins>
