--- a/DentalManagement/DentalManagement/src/main/resources/application.properties
+++ b/DentalManagement/DentalManagement/src/main/resources/application.properties
@@ -30,3 +30,7 @@ spring.datasource.hikari.connectionTimeout=60000
 spring.datasource.hikari.maximumPoolSize=10
 spring.datasource.hikari.minimumIdle=5
 
+# Enable detailed logging
+logging.level.org.springframework=DEBUG
+logging.level.com.dentalmanagement.DentalManagement=DEBUG
+
