--- a/DentalManagement/DentalManagement/pom.xml
+++ b/DentalManagement/DentalManagement/pom.xml
@@ -41,6 +41,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>5.8.1</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>com.azure.resourcemanager</groupId>
 			<artifactId>azure-resourcemanager-appservice</artifactId>
