--- a/DentalManagement/DentalManagement/pom.xml
+++ b/DentalManagement/DentalManagement/pom.xml
@@ -47,6 +47,12 @@
 			<artifactId>azure-resourcemanager-appservice</artifactId>
 			<version>2.44.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
