--- a/DentalManagement/DentalManagement/src/main/resources/application.properties
+++ b/DentalManagement/DentalManagement/src/main/resources/application.properties
@@ -34,5 +34,9 @@ spring.datasource.hikari.minimumIdle=5
 logging.level.org.springframework=DEBUG
 logging.level.com.dentalmanagement.DentalManagement=DEBUG
 
-
-
+spring.mail.host=smtp.gmail.com
+string.mail.port=587
+spring.mail.username=dentalcapstone5@gmail.com
+spring.mail.password=refv mnky vuqe jrjg
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
