email outlook config in application properties

--- a/DentalManagement/DentalManagement/src/main/resources/application.properties
+++ b/DentalManagement/DentalManagement/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.datasource.hikari.minimumIdle=5
 logging.level.org.springframework=DEBUG
 logging.level.com.dentalmanagement.DentalManagement=DEBUG
 
-spring.mail.host=smtp.outlook.com
+spring.mail.host=smtp.office365.com
 spring.mail.port=587
 spring.mail.username=dentalcapstone5@outlook.com
 spring.mail.password=vdncvnszgrcntmwo
