outlook application properties

--- a/DentalManagement/DentalManagement/src/main/resources/application.properties
+++ b/DentalManagement/DentalManagement/src/main/resources/application.properties
@@ -40,3 +40,4 @@ spring.mail.username=dentalcapstone5@outlook.com
 spring.mail.password=vdncvnszgrcntmwo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.debug=true
