--- a/DentalManagement/DentalManagement/src/main/resources/application.properties
+++ b/DentalManagement/DentalManagement/src/main/resources/application.properties
@@ -36,7 +36,7 @@ logging.level.com.dentalmanagement.DentalManagement=DEBUG
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=dentalcapstone5@outlook.com
-spring.mail.password=scurhihhpyazfohk
+spring.mail.username=dentalcapstone5@gmail.com
+spring.mail.password=tmya wspv enps gwxd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
