--- a/DentalManagement/DentalManagement/src/main/resources/application.properties
+++ b/DentalManagement/DentalManagement/src/main/resources/application.properties
@@ -35,6 +35,7 @@ logging.level.org.springframework=DEBUG
 logging.level.com.dentalmanagement.DentalManagement=DEBUG
 
 spring.mail.host=smtp.gmail.com
+spring.mail.properties.mail.from=Dental Management <dentalcapstone5@gmail.com>
 spring.mail.port=587
 spring.mail.username=dentalcapstone5@gmail.com
 spring.mail.password=tmya wspv enps gwxd
