successful email testing

--- a/DentalManagement/DentalManagement/src/main/resources/application.properties
+++ b/DentalManagement/DentalManagement/src/main/resources/application.properties
@@ -34,10 +34,16 @@ spring.datasource.hikari.minimumIdle=5
 logging.level.org.springframework=DEBUG
 logging.level.com.dentalmanagement.DentalManagement=DEBUG
 
+# TLS and SSL Trust
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.application.name=Dental Management
 spring.mail.host=smtp.gmail.com
-spring.mail.properties.mail.from=Dental Management <dentalcapstone5@gmail.com>
 spring.mail.port=587
 spring.mail.username=dentalcapstone5@gmail.com
-spring.mail.password=tmya wspv enps gwxd
+spring.mail.password=hyht ylcz fwer dwku
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
