--- a/DentalManagement/DentalManagement/src/main/resources/application.properties
+++ b/DentalManagement/DentalManagement/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 ## Setup the db connection
 #spring.datasource.url=jdbc:mysql://dentalmanagementserver.mysql.database.azure.com:3306/information_schema?serverTimezone=UTC&useSSL=true&requireSSL=false
 #
+
+# Setup the db connection
+spring.datasource.url = jdbc:mysql://localhost:3306/dbdentalmanagement
+
 ## Setup db login credentials
-#spring.datasource.username = root
-#spring.datasource.password = root
+spring.datasource.username = root
+spring.datasource.password = root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://happy-dental-server.mysql.database.azure.com:3306/dbdentalmanagement?useSSL=true
-spring.datasource.username=dental
-spring.datasource.password=Happyteeth#5
+#spring.datasource.url=jdbc:mysql://happy-dental-server.mysql.database.azure.com:3306/dbdentalmanagement?useSSL=true
+#spring.datasource.username=dental
+#spring.datasource.password=Happyteeth#5
 
 
 # Auto create tables based on entities
@@ -44,6 +48,6 @@ spring.application.name=Dental Management
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=dentalcapstone5@gmail.com
-spring.mail.password=hyht ylcz fwer dwku
+spring.mail.password=zghs zgtm oagq tfvm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
