modified application properties

--- a/DentalManagement/DentalManagement/src/main/resources/application.properties
+++ b/DentalManagement/DentalManagement/src/main/resources/application.properties
@@ -3,7 +3,8 @@
 #
 
 # Setup the db connection
-spring.datasource.url = jdbc:mysql://localhost:3306/dbdentalmanagement
+# spring.datasource.url = jdbc:mysql://localhost:3306/dbdentalmanagement
+spring.datasource.url = mysql://root:kuXKmJwwEirXpraNFKleZDrKtOLVYHXd@mysql.railway.internal:3306/railway
 
 ## Setup db login credentials
 spring.datasource.username = root
