--- a/DentalManagement/DentalManagement/src/main/resources/application.properties
+++ b/DentalManagement/DentalManagement/src/main/resources/application.properties
@@ -4,11 +4,10 @@
 
 # Setup the db connection
 # spring.datasource.url = jdbc:mysql://localhost:3306/dbdentalmanagement
-spring.datasource.url = mysql://root:kuXKmJwwEirXpraNFKleZDrKtOLVYHXd@mysql.railway.internal:3306/railway
-
+spring.datasource.url = jdbc:mysql://caboose.proxy.rlwy.net:28211/railway
 ## Setup db login credentials
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = kuXKmJwwEirXpraNFKleZDrKtOLVYHXd
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://happy-dental-server.mysql.database.azure.com:3306/dbdentalmanagement?useSSL=true
